fixed overlap issue on portfolio page

--- a/styles.css
+++ b/styles.css
@@ -205,7 +205,7 @@ i.fa.fa-twitter-square {
 .portfolio_bio {
   color: #181842;
   margin-left: 10px;
-  margin-top: 20px;
+  margin-top: 200px;
   margin-bottom: 20px;
   font-size: 16px;
 }
